User routes wip

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -10,5 +10,5 @@ COOKIE_EXPIRE=5
 SMPT_HOST="smtp.gmail.com"
 SMPT_PORT=465
 SMPT_SERVICE=gmail
-SMPT_MAIL=baker.pucit@gmail.com
-SMPT_PASSWORD=muhammad53
+SMPT_MAIL=
+SMPT_PASSWORD=
